feat : side menu

--- a/client/src/locales/fr.json
+++ b/client/src/locales/fr.json
@@ -1,4 +1,10 @@
 {
+    "menu": {
+        "auth": "S'inscrire / Se connecter",
+        "book": "Recettes",
+        "profile": "Mon profile",
+        "logout": "Se déconnecter"
+    },
     "auth": {
         "login": {
             "title": "Se connecter"
