--- a/client/src/locales/fr.json
+++ b/client/src/locales/fr.json
@@ -1,7 +1,8 @@
 {
     "common": {
         "cancel": "Annuler",
-        "submit": "Enregistrer"
+        "submit": "Enregistrer",
+        "of": "de"
     },
     "menu": {
         "auth": "S'inscrire / Se connecter",
@@ -57,6 +58,26 @@
             "category": "Catégorie",
             "duration": "Temps",
             "tip": "Astuce"
+        }
+    },
+    "recipe": {
+        "tip": "Astuce",
+        "ingredients": {
+            "fields": {
+                "name": "Nom",
+                "quantity": "Quantité",
+                "unit": "Unité"
+            },
+            "create": {
+                "title": "Ajouter un ingrédient pour {{recipe}}"
+            }
+        },
+        "update": {
+            "title": "Modifier {{recipe}}"
+        },
+        "delete": {
+            "title": "Supprimer {{recipe}}",
+            "body": "Êtes vous sûr de supprimer {{recipe}} ?"
         }
     }
 }
